# scraper

./: Cargo.toml  README.md
ext/disable-cors/: manifest.json  rule.json
ext/disable-cors/_metadata/generated_indexed_rulesets/: _ruleset1
src/: cli.rs  error.rs  image.rs  lib.rs  main.rs  page.rs  scraper.rs  util.rs
src/scraper/: image.rs  url.rs
