[package]
name = "scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thirtyfour = "0.31.0"
tokio = { version = "1.21.2", features = ["macros"] }
dataurl = "0.1.2"
serde_json = "1.0.86"
base64 = "0.13.0"
chrono = "0.4.22"
derive-getters = "0.2.0"
regex = "1.6.0"
url = "2.3.1"
async-trait = "0.1.57"
